feat: Professional microservice security - JWT Gateway auth, clean controllers, notification integration
Changes:
- NotificationController: JWT header extraction (X-User-Id), clean broadcast via body userId
- NotificationService: sendGlobalNotification reverted to original design (userId in body)
- NotificationService security: broadcast permitAll (role check in service layer)
- UserController: removed /internal/* endpoints, back to original 2 methods
- UserService SecurityConfig: GET /users and /users/{id} permitAll for Feign calls
- UserClient (Notification/Reporting): point to /users/{id} regular endpoint
- ReportingService GlobalExceptionHandler: missing header returns 401 with JWT guidance
- SiteService: sendGlobalBroadcast restored (was wrongly changed to sendSystemAlert)
- Added TourismGov_API_Reference.txt for Postman testing
- Added Notification_Reporting_Postman_Collection.json